objects/ssot__ServiceTerritory__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__Address__c</fullName>
        <label>Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AverageTravelTimeMinutes__c</fullName>
        <label>Average Travel Time Minutes</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GeolocationText__c</fullName>
        <label>Geolocation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Service Territory Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InTerritoryTravelTimeMinutes__c</fullName>
        <label>In Territory Travel Time Minutes</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <label>Is Active</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsUsingOptimizationEngine__c</fullName>
        <label>Is Using Optimization Engine</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OperatingHoursId__c</fullName>
        <label>Operating Hours</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentTerritoryId__c</fullName>
        <label>Parent Territory</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceClusterMinimumSize__c</fullName>
        <label>Service Cluster Minimum Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceClusterProximity__c</fullName>
        <label>Service Cluster Proximity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceTerritory_OwnerId_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ServiceTerritory_OwnerId_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ServiceTerritory_OwnerId_map_User_Id_N_1</relationshipLabel>
        <relationshipName>ServiceTerritory_OwnerId_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ServicesToDripFeedNumber__c</fullName>
        <label>Services To Drip Feed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ShouldHideEmergencyMap__c</fullName>
        <label>Should Hide Emergency Map</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TerritoryLevelNumber__c</fullName>
        <label>Territory Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TopLevelTerritoryId__c</fullName>
        <label>Top Level Territory</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1705061032574_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ServiceTerritory_LastModifiedById_ma_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ServiceTerritory_LastModifiedById_ma_rel</relationshipLabel>
        <relationshipName>rel_1705061032574_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1705061033072_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ServiceTerritory_Address_map_Address_rel</label>
        <referenceTo>ssot__Address__dlm</referenceTo>
        <relationshipLabel>ServiceTerritory_Address_map_Address_rel</relationshipLabel>
        <relationshipName>rel_1705061033072_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1705061033697_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ServiceTerritory_CreatedById_map_Use_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ServiceTerritory_CreatedById_map_Use_rel</relationshipLabel>
        <relationshipName>rel_1705061033697_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>